# midi-games

./: demo.py  pyproject.toml
MidiSnake/: cli.py
WhacAMidi/: cli.py
