[tool.poetry]
name = "midigames"
version = "0.1.0"
description = ""
authors = ["DerFetzer <kontakt@der-fetzer.de>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
mido = "^1.2.10"
pygame = "^2.1.2"
python-rtmidi = "^1.4.9"
numpy = "^1.23.0"
scipy = "^1.8.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
